--- a/config.yaml
+++ b/config.yaml
@@ -108,6 +108,7 @@ params:
       target="_blank" rel="noopener">Stackbit</a>. Create yours <a
       href="https://app.stackbit.com/create?theme=startup&utm_source=deployed-footer"
       target="_blank" rel="noopener">now</a>
+  domain: 'https://ekaterina-f92ad.netlify.app'
 taxonomies:
   stub: stub
 disableKinds:
